--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsappclone",
+  "name": "chat_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
+    "emoji-picker-react": "^3.4.4",
     "firebase": "^8.3.2",
     "moment": "^2.29.1",
     "next": "10.1.2",
