--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "email-validator": "^2.0.4",
     "emoji-picker-react": "^3.4.4",
     "firebase": "^8.3.2",
+    "lodash": "^4.17.4",
     "moment": "^2.29.1",
     "next": "10.1.2",
     "react": "17.0.2",
